<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/factura"
        android:textSize="@dimen/subtittle_big"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/txt_mostrar_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/txt_mostrar_correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/txt_mostrar_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detalle_de_productos"
        android:textSize="18sp"
        android:layout_gravity="center"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/LiLa2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorAccent"
            android:paddingTop="@dimen/padding_icono"
            android:paddingBottom="@dimen/padding_icono"
            android:paddingLeft="@dimen/padding_icono"
            android:paddingRight="@dimen/padding_icono"
            android:layout_margin="@dimen/padding_icono"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/producto_1"
                android:textSize="18dp"/>
            <TextView
                android:id="@+id/Txt2_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numeral"
                android:textSize="30dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LiLa2_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#529600"
            android:paddingTop="@dimen/padding_icono"
            android:paddingBottom="@dimen/padding_icono"
            android:paddingLeft="@dimen/padding_icono"
            android:paddingRight="@dimen/padding_icono"
            android:layout_margin="@dimen/padding_icono"
            android:gravity="center">
            <TextView
                android:id="@+id/Txt2_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/producto_2"
                android:textSize="18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numeral"
                android:textSize="30dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LiLa2_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorAccent"
            android:paddingTop="@dimen/padding_icono"
            android:paddingBottom="@dimen/padding_icono"
            android:paddingLeft="@dimen/padding_icono"
            android:paddingRight="@dimen/padding_icono"
            android:layout_margin="@dimen/padding_icono"
            android:gravity="center">
            <TextView
                android:id="@+id/Txt2_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/producto_3"
                android:textSize="18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numeral"
                android:textSize="30dp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/LiLa2_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorAccent"
            android:paddingTop="@dimen/padding_icono"
            android:paddingBottom="@dimen/padding_icono"
            android:paddingLeft="@dimen/padding_icono"
            android:paddingRight="@dimen/padding_icono"
            android:layout_margin="@dimen/padding_icono"
            android:gravity="center">
            <TextView
                android:id="@+id/Txt2_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/producto_4"
                android:textSize="18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numeral"
                android:textSize="30dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LiLa2_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#529600"
            android:paddingTop="@dimen/padding_icono"
            android:paddingBottom="@dimen/padding_icono"
            android:paddingLeft="@dimen/padding_icono"
            android:paddingRight="@dimen/padding_icono"
            android:layout_margin="@dimen/padding_icono"
            android:gravity="center">
            <TextView
                android:id="@+id/Txt2_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/producto_5"
                android:textSize="18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numeral"
                android:textSize="30dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LiLa2_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorAccent"
            android:paddingTop="@dimen/padding_icono"
            android:paddingBottom="@dimen/padding_icono"
            android:paddingLeft="@dimen/padding_icono"
            android:paddingRight="@dimen/padding_icono"
            android:layout_margin="@dimen/padding_icono"
            android:gravity="center">
            <TextView
                android:id="@+id/Txt2_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/producto_6"
                android:textSize="18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numeral"
                android:textSize="30dp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/LiLa2_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorAccent"
            android:paddingTop="@dimen/padding_icono"
            android:paddingBottom="@dimen/padding_icono"
            android:paddingLeft="@dimen/padding_icono"
            android:paddingRight="@dimen/padding_icono"
            android:layout_margin="@dimen/padding_icono"
            android:gravity="center">
            <TextView
                android:id="@+id/Txt2_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/producto_7"
                android:textSize="18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numeral"
                android:textSize="30dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LiLa2_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#529600"
            android:paddingTop="@dimen/padding_icono"
            android:paddingBottom="@dimen/padding_icono"
            android:paddingLeft="@dimen/padding_icono"
            android:paddingRight="@dimen/padding_icono"
            android:layout_margin="@dimen/padding_icono"
            android:gravity="center">
            <TextView
                android:id="@+id/Txt2_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/producto_8"
                android:textSize="18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numeral"
                android:textSize="30dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LiLa2_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorAccent"
            android:paddingTop="@dimen/padding_icono"
            android:paddingBottom="@dimen/padding_icono"
            android:paddingLeft="@dimen/padding_icono"
            android:paddingRight="@dimen/padding_icono"
            android:layout_margin="@dimen/padding_icono"
            android:gravity="center">
            <TextView
                android:id="@+id/Txt2_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/producto_9"
                android:textSize="18dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numeral"
                android:textSize="30dp"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_compartir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compartir"
        android:layout_gravity="center"/>


</LinearLayout>