<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contador_de_productos"
        android:textSize="30sp"
        android:layout_gravity="center"/>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/LiLa_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorAccent"
            android:paddingTop="@dimen/padding_icono"
            android:paddingBottom="@dimen/padding_icono"
            android:paddingLeft="@dimen/padding_icono"
            android:paddingRight="@dimen/padding_icono"
            android:layout_margin="@dimen/padding_icono"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/producto_1"
                android:textSize="18dp"/>
            <TextView
                android:id="@+id/Txt_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numeral"
                android:textSize="30dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LiLa_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#529600"
            android:paddingTop="@dimen/padding_icono"
            android:paddingBottom="@dimen/padding_icono"
            android:paddingLeft="@dimen/padding_icono"
            android:paddingRight="@dimen/padding_icono"
            android:layout_margin="@dimen/padding_icono"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/producto_2"
                android:textSize="18dp"/>
            <TextView
                android:id="@+id/Txt_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numeral"
                android:textSize="30dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LiLa_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorAccent"
            android:paddingTop="@dimen/padding_icono"
            android:paddingBottom="@dimen/padding_icono"
            android:paddingLeft="@dimen/padding_icono"
            android:paddingRight="@dimen/padding_icono"
            android:layout_margin="@dimen/padding_icono"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/producto_3"
                android:textSize="18dp"/>
            <TextView

                android:id="@+id/Txt_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numeral"
                android:textSize="30dp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/LiLa_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorAccent"
            android:paddingTop="@dimen/padding_icono"
            android:paddingBottom="@dimen/padding_icono"
            android:paddingLeft="@dimen/padding_icono"
            android:paddingRight="@dimen/padding_icono"
            android:layout_margin="@dimen/padding_icono"
            android:gravity="center">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/producto_4"
                android:textSize="18dp"/>
            <TextView
                android:id="@+id/Txt_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numeral"
                android:textSize="30dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LiLa_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#529600"
            android:paddingTop="@dimen/padding_icono"
            android:paddingBottom="@dimen/padding_icono"
            android:paddingLeft="@dimen/padding_icono"
            android:paddingRight="@dimen/padding_icono"
            android:layout_margin="@dimen/padding_icono"
            android:gravity="center">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/producto_5"
                android:textSize="18dp"/>
            <TextView
                android:id="@+id/Txt_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numeral"
                android:textSize="30dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LiLa_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorAccent"
            android:paddingTop="@dimen/padding_icono"
            android:paddingBottom="@dimen/padding_icono"
            android:paddingLeft="@dimen/padding_icono"
            android:paddingRight="@dimen/padding_icono"
            android:layout_margin="@dimen/padding_icono"
            android:gravity="center">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/producto_6"
                android:textSize="18dp"/>
            <TextView
                android:id="@+id/Txt_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numeral"
                android:textSize="30dp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/LiLa_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorAccent"
            android:paddingTop="@dimen/padding_icono"
            android:paddingBottom="@dimen/padding_icono"
            android:paddingLeft="@dimen/padding_icono"
            android:paddingRight="@dimen/padding_icono"
            android:layout_margin="@dimen/padding_icono"
            android:gravity="center">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/producto_7"
                android:textSize="18dp"/>
            <TextView
                android:id="@+id/Txt_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numeral"
                android:textSize="30dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LiLa_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#529600"
            android:paddingTop="@dimen/padding_icono"
            android:paddingBottom="@dimen/padding_icono"
            android:paddingLeft="@dimen/padding_icono"
            android:paddingRight="@dimen/padding_icono"
            android:layout_margin="@dimen/padding_icono"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/producto_8"
                android:textSize="18dp"/>
            <TextView
                android:id="@+id/Txt_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numeral"
                android:textSize="30dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LiLa_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorAccent"
            android:paddingTop="@dimen/padding_icono"
            android:paddingBottom="@dimen/padding_icono"
            android:paddingLeft="@dimen/padding_icono"
            android:paddingRight="@dimen/padding_icono"
            android:layout_margin="@dimen/padding_icono"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/producto_9"
                android:textSize="18dp"/>
            <TextView
                android:id="@+id/Txt_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numeral"
                android:textSize="30dp"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:textSize="18sp"/>
    <EditText
        android:id="@+id/ET_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Escribe el usuario aquí"
        android:layout_margin="@dimen/padding_icono"
        android:textSize="18sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        android:textSize="18sp"/>
    <EditText
        android:id="@+id/ET_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Escribe el correo aquí"
        android:layout_margin="@dimen/padding_icono"
        android:textSize="18sp"/>
    <Button
        android:id="@+id/btn_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ENVIAR"
        android:layout_gravity="center"/>


</LinearLayout>